# chip8

./: Cargo.toml
chip8_decode/: Cargo.toml
chip8_decode/src/: errors.rs  instructions.rs  lib.rs  numtypes.rs  reg.rs
chip8_hw/: Cargo.toml
chip8_hw/src/: chip8.rs  keyboard.rs  lib.rs  reg.rs
chip8_hw/src/chip8/: font.rs  quirks.rs  timers.rs
roms/: readme.txt
shared/src/: lib.rs  numtypes.rs  reg.rs
