workspace = { members = ["chip8_decode", "chip8_hw", "shared"] }
[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8_decode = { path = "chip8_decode" }
chip8_hw = { path = "chip8_hw" }
minifb = "0.25"